Use popup messages - Close messages after 5 seconds FIX: send messages directly to Alert list component FIX: display Date format moved to App component NEW: tszAlert class has new field: createdAt - date of creation NEW: Alert messages show tooltip with their own date of crreation FIX: in footer component, aligned Angular link to bottom

--- a/src/app/ff-todo-footer/ff-todo-footer.component.css
+++ b/src/app/ff-todo-footer/ff-todo-footer.component.css
@@ -6,6 +6,10 @@ svg#clouds {
     width: 1920px;
   }
 
+  .navbar {
+    align-items: flex-end;
+  }
+
   footer {
     margin-top: 8px;
     display: flex;
